Fixed z-index on the scroll thingie

--- a/hitman/r/css/main.css
+++ b/hitman/r/css/main.css
@@ -80,6 +80,7 @@ h1 {
 
 
 .cover .scroll {
+    position: relative;
     font-size: 2.25rem;
     z-index: 1;
     opacity: 0;
